Save Offer API and Get Highest Discount API Created